updated upgrade button text, fixed button height bug, fixed expired text bug where the expired area would shrink on Ghosts with messages that overflow.

--- a/src/scss/base/_base_elements.scss
+++ b/src/scss/base/_base_elements.scss
@@ -49,7 +49,6 @@ select,
   border-radius: $radius-default;
   font-size: 16px;
   height: 36px;
-  line-height: 32px;
   padding: 0 4px;
   transition: $speed-normal;
   width: 100%;
